--- a/assets/styles.css
+++ b/assets/styles.css
@@ -63,7 +63,7 @@ textarea{
   border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-  background-color: #06AED5;
+  background-color: #9306d5;
   color: white;
   /* padding-top: 1.75rem; */
 }
