--- a/assets/styles.css
+++ b/assets/styles.css
@@ -2,6 +2,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
   line-height: 1;
+  background-color: #000000;
 }
 
 textarea{
@@ -9,18 +10,19 @@ textarea{
   border: none;
   resize: none;
   color: #000000;
-  border-left: 1px solid black;
+  border-left: 3px solid black;
   padding: 10px;
   width: 100%;
   height: 100%;
+  font-size: 30px;
 }
 
 .jumbotron {
   text-align: center;
   background-color: transparent;
-  color: black;
+  color: rgb(255, 255, 255);
   border-radius: 0;
-  border-bottom: 10px solid black;
+  border-bottom: 10px solid rgb(242, 0, 255);
 }
 
 .description{
@@ -35,13 +37,12 @@ textarea{
 .row {
   white-space: pre-wrap;
   height: 80px;
-  border-top: 1px solid white;;
 }
 
 .hour {
   background-color: #ffffff;
   color: #000000;
-  border-top: 1px dashed #000000;
+  border-top: 3px solid #000000;
 }
 
 .past {
@@ -63,7 +64,7 @@ textarea{
   border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-  background-color: #9306d5;
+  background-color: #06c7d5;
   color: white;
   /* padding-top: 1.75rem; */
 }
